fix: add `overflow-x: hidden;` to #app

--- a/src/style.css
+++ b/src/style.css
@@ -28,3 +28,7 @@ a {
   display: block;
   align-self: center;
 }
+
+#app {
+  overflow-x: hidden;
+}
